# FlexCRM

./: .gitignore  README.md  docker-compose.yaml  nginx.conf  requirements.txt
FlexCRM/FlexCRM/: asgi.py  settings.py  urls.py  wsgi.py
backend/: Dockerfile  env.template  nginx.conf  pyproject.toml  requirements.txt  supervisord.ini  uwsgi.ini
backend/FlexCRM/: crm_fixtures.json  manage.py
backend/FlexCRM/FlexCRM/: settings.py  urls.py
backend/FlexCRM/crmapp/: models.py  serializers.py  urls.py  views.py
backend/FlexCRM/crmapp/migrations/: 0002_customer_adds_alter_customer_lead.py  0004_contract_company.py  0005_alter_add_customers_count.py  0008_remove_customer_adds_customer_adds.py  0010_alter_contract_company_alter_contract_product.py  0011_customer_description.py
backend/FlexCRM/crmauth/: serializers.py  urls.py  views.py
backend/flexcrm/: crm_fixtures.json  groups_perms.json  manage.py
backend/flexcrm/crmapp/: models.py  serializers.py  views.py
backend/flexcrm/crmapp/migrations/: 0001_initial.py  0003_remove_add_leads_count.py  0006_alter_add_product.py  0007_remove_add_product_add_product.py  0009_contract_product.py  0010_alter_contract_company_alter_contract_product.py  0012_rename_add_ad.py
backend/flexcrm/crmauth/: apps.py  serializers.py  urls.py  views.py
backend/flexcrm/crmauth/management/commands/: crmsuperuser.py
backend/flexcrm/flexcrm/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: Dockerfile  env.template
frontend/FlexCRM/: index.html  package-lock.json  package.json  vite.config.ts
frontend/FlexCRM/src/: App.tsx  api.ts  (+3 more)
(+59 files in other folders)
